# cpmcprotocol

./: .gitignore  CMakeLists.txt  LICENSE  README.md  spec.md
cmake/: cpmcprotocolConfig.cmake.in
include/cpmcprotocol/: access_option.hpp  communication_mode.hpp  device.hpp  mc_client.hpp  runtime_control.hpp  session_config.hpp  transport.hpp  value_codec.hpp
include/cpmcprotocol/codec/: device_code_map.hpp  frame_decoder.hpp  frame_encoder.hpp
samples/monitor_client/: CMakeLists.txt  main.cpp
src/: device_catalog.cpp  mc_client.cpp  runtime_control.cpp  session_config.cpp  transport.cpp  value_codec.cpp
src/codec/: device_code_map.cpp  frame_decoder.cpp  frame_encoder.cpp
tests/: CMakeLists.txt
tests/integration/: test_mc_client.cpp  test_transport_loopback.cpp
tests/unit/: test_frame_codec.cpp  test_session_config.cpp  test_value_codec.cpp
tests/util/: mock_slmp_server.cpp  mock_slmp_server.hpp
